--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "www.epcis.top/blog"
+baseURL = "/"
 # baseURL = "/Users/tumukeren/soft/hugo/test/public/"
 languageCode = "en"
 defaultContentLanguage = "en"                             # en / zh-cn / ... (This field determines which i18n file to use)
